--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,18 +11,19 @@ mdms {
   runmode = 1
 
   #srcurl = "jdbc:oracle:thin:sgdm/sgdm@//192.168.5.21:1521/orcl"
-  srcurl = "jdbc:oracle:thin:mdms/mdms@//192.168.5.2:1521/orcl"
+  #srcurl = "jdbc:oracle:thin:mdms/mdms@//192.168.2.1:1521/orcl"
+  srcurl = "jdbc:oracle:thin:mdms/mdms@//had00p01.test.sgri.com:1521/orcl.test.sgri.com"
 
   tgturl = "jdbc:postgresql://192.168.5.2:5433/sgdm_for_etl?user=wendong&password=wendong"
 
   pgdti = "datetimeinterval"
 
   # for machine learning k-means clustering 
-  numClusters = 6
+  numClusters = 7
   numIters = 30
   numRuns = 3
 
-  # number of buckets for Bin power and voltage data
+  # number of buckets to Bin power and voltage data
   numBucketAP = 60
   numBucketV  = 20
 
@@ -32,11 +33,23 @@ mdms {
   # Spring, Summer, Fall, Winter
   numSeasons = 4
 
-  #  Weekday, Weekend, Holiday
+  # Weekday, Weekend, Holiday
   numDaytypes = 3
 
   # Voltage high low limits
   volt_low = 150
   volt_high = 300
 
+  # Do interactive analysis for give set of meter ids
+  interactive_meter = true
+
+  # Meter IDs for interactive analysis
+  meterids {
+    ids = [
+            5072000021280
+            5072000029604
+            7002001122724
+            8000000042273601
+          ]
+  }
 }
