--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,16 +10,19 @@ mdms {
   #                   4: Machine Learning
   runmode = 1
 
-  #srcurl = "jdbc:oracle:thin:sgdm/sgdm@//192.168.5.21:1521/orcl"
+  srcurl = "jdbc:oracle:thin:sgdm/sgdm@//192.168.5.21:1521/orcl"
   #srcurl = "jdbc:oracle:thin:mdms/mdms@//192.168.2.1:1521/orcl"
-  srcurl = "jdbc:oracle:thin:mdms/mdms@//had00p01.test.sgri.com:1521/orcl.test.sgri.com"
+  #srcurl = "jdbc:oracle:thin:mdms/mdms@//had00p01.test.sgri.com:1521/orcl.test.sgri.com"
 
   tgturl = "jdbc:postgresql://192.168.5.2:5433/sgdm_for_etl?user=wendong&password=wendong"
 
   pgdti = "datetimeinterval"
 
+  # number of parellel processes to write into database
+  numProcesses = 10
+
   # for machine learning k-means clustering 
-  numClusters = 7
+  numClusters = 6
   numIters = 30
   numRuns = 3
 
