Update config params

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,9 +10,9 @@ mdms {
   #                   4: Machine Learning
   runmode = 1
 
-  srcurl = "jdbc:oracle:thin:sgdm/sgdm@//192.168.5.21:1521/orcl"
+  #srcurl = "jdbc:oracle:thin:sgdm/sgdm@//192.168.5.21:1521/orcl"
   #srcurl = "jdbc:oracle:thin:mdms/mdms@//192.168.2.1:1521/orcl"
-  #srcurl = "jdbc:oracle:thin:mdms/mdms@//had00p01.test.sgri.com:1521/orcl.test.sgri.com"
+  srcurl = "jdbc:oracle:thin:mdms/mdms@//had00p01.test.sgri.com:1521/orcl.test.sgri.com"
 
   tgturl = "jdbc:postgresql://192.168.5.2:5433/sgdm_for_etl?user=wendong&password=wendong"
 
@@ -24,11 +24,14 @@ mdms {
   # for machine learning k-means clustering 
   numClusters = 6
   numIters = 30
-  numRuns = 3
+  numRuns = 1
 
   # number of buckets to Bin power and voltage data
-  numBucketAP = 60
-  numBucketV  = 20
+  #numBucketAP = 60|40
+  #numBucketV  = 20|4
+  numBucketAP = 10
+  numBucketV  =  3
+  numBucketAP2 = 4 
 
   # Industrial, Commercial, Residential
   numLoadtypes = 3
@@ -36,15 +39,17 @@ mdms {
   # Spring, Summer, Fall, Winter
   numSeasons = 4
 
-  # Weekday, Weekend, Holiday
-  numDaytypes = 3
+  # Weekday, Weekend (Holiday to be added)
+  numDaytypes = 2
 
-  # Voltage high low limits
+  # Voltage high low limits, and nominal value
   volt_low = 150
   volt_high = 300
+  volt_nominal = 220.0
 
   # Do interactive analysis for give set of meter ids
-  interactive_meter = true
+  #interactive_meter = true
+  interactive_meter = false
 
   # Meter IDs for interactive analysis
   meterids {
