--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,11 +15,12 @@ mdms {
   srcurl = "jdbc:oracle:thin:mdms/mdms@//had00p01.test.sgri.com:1521/orcl.test.sgri.com"
 
   tgturl = "jdbc:postgresql://192.168.5.2:5433/sgdm_for_etl?user=wendong&password=wendong"
+  tgturlSeg = "jdbc:postgresql://192.168.5.2:5433/sgdm_for_etl_large?user=wendong&password=wendong"
 
   pgdti = "datetimeinterval"
 
   # number of parellel processes to write into database
-  numProcesses = 10
+  numProcesses = 70
 
   # for machine learning k-means clustering 
   numClusters = 6
@@ -46,6 +47,14 @@ mdms {
   volt_low = 150
   volt_high = 300
   volt_nominal = 220.0
+
+  voltLow1 = 10.0
+  voltLow2 = 88 
+  voltLow3 = 132
+  voltLow4 = 188.0
+  voltHigh = 236.0
+  voltHigh2 = 253.0
+  voltDefault = 220.0
 
   # Do interactive analysis for give set of meter ids
   #interactive_meter = true
