add volt220_nominal, volt110_nominal

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -44,9 +44,10 @@ mdms {
   numDaytypes = 2
 
   # Voltage high low limits, and nominal value
-  volt_low = 150
+  volt_low = 154
   volt_high = 300
-  volt_nominal = 220.0
+  volt220_nominal = 220.0
+  volt110_nominal = 110.0
 
   voltLow1 = 10.0
   voltLow2 = 88 
