--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -43,6 +43,9 @@ mdms {
   # Weekday, Weekend (Holiday to be added)
   numDaytypes = 2
 
+  # minimum number of data points in 24-hour period each meter for processing after aggregation by season and daytype
+  minNumPoints = 12
+
   # Voltage high low limits, and nominal value
   volt_low = 154
   volt_high = 300
