add new parameters - startDT, numDays, partitionLB, partitionUP, etc

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,7 +15,8 @@ mdms {
   #srcurl = "jdbc:oracle:thin:sgdm/sgdm@//192.168.5.21:1521/orcl"
   #srcurl = "jdbc:oracle:thin:mdms/mdms@//192.168.2.1:1521/orcl"
   srcurl = "jdbc:oracle:thin:mdms/mdms@//had00p01.test.sgri.com:1521/orcl.test.sgri.com"
-  tgturl = "jdbc:postgresql://192.168.5.2:5433/sgdm_for_etl?user=wendong&password=wendong"
+  #tgturl = "jdbc:postgresql://192.168.5.2:5433/sgdm_for_etl?user=postgres&password=root"
+  tgturl = "jdbc:postgresql://192.168.5.2:5433/test2?user=postgres&password=root"
 
   # for Segmentation schema
   tgturlSeg = "jdbc:postgresql://192.168.5.2:5433/sgdm_for_etl_large?user=wendong&password=wendong"
@@ -49,6 +50,22 @@ mdms {
 
   # minimum number of data points in 24-hour period each meter for processing after aggregation by season and daytype
   minNumPoints = 12
+
+  # Starting date and time
+  startDT = "2013-01-01 00:00:00"
+
+  # Number of Days for all the data
+  numDays = 365
+
+  # Lower & Upper Bound for partition for loading data
+  partitionLB = "1"
+  partitionUB = "35040"
+  
+  # number of partitions for loading data
+  numPartitions="100"
+ 
+  # partition column
+  partCol = "dti"
 
   # Voltage high low limits, and nominal value
   volt_low = 154
